--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,5 @@
 DB_PASSWORD=EstaEsLaContraseñaSecreta
-DB_NAME:TesloDB
-DB_HOST:localhost
-DB_PORT:5432
-DB_USERNAME:postgres
+DB_NAME=TesloDB
+DB_HOST=localhost
+DB_PORT=5432
+DB_USERNAME=postgres
